update font family to Nunito and update qrcode

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,800" rel="stylesheet">
 
+    
     <title>Andrew Cornell Portfolio</title>
 
     <!-- Google Tag Manager -->
